--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@
       border-radius: 8px;
       background: #000;
     }
+    /* Updated placeholder to load YouTube’s custom thumbnail */
     .placeholder-frame {
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      cursor: pointer;
       overflow: hidden;
+      cursor: pointer;
       z-index: 100;
     }
     .placeholder-frame img {
@@ -249,7 +250,7 @@
     <div class="electric-frame">
       <div class="video-container">
         <div class="video-wrapper">
-          <!-- use your actual YouTube thumbnail here -->
+          <!-- show your actual YouTube thumbnail here -->
           <div class="placeholder-frame" id="placeholder">
             <img
               src="https://img.youtube.com/vi/3gGz-jLkYoI/maxresdefault.jpg"
@@ -363,7 +364,7 @@
       .sort((a, b) => new Date(b[3]) - new Date(a[3]));
     if (!reviews.length) return;
 
-    const avg = (reviews.reduce((sum, r) => sum + (parseFloat(r[2])||0), 0) / reviews.length).toFixed(1);
+    const avg = (reviews.reduce((sum, r) => sum + (parseFloat(r[2]) || 0), 0) / reviews.length).toFixed(1);
     const count = reviews.length;
 
     const wrapper = document.createElement('div');
