--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     }
 
     /* ──────────────────────────────────────────────────────────────────
-       Masked Video Styles
+       Masked Video Styles & Custom Cover
     ────────────────────────────────────────────────────────────────── */
     .video-container {
       position: relative;
@@ -180,7 +180,7 @@
       background: #000;
     }
 
-    /* ← Overridden: remove old background and let the IMG show through */
+    /* Custom cover overrides old background */
     .placeholder-frame {
       position: absolute;
       top: 0; left: 0;
@@ -281,11 +281,10 @@
       <div class="video-container">
         <div class="video-wrapper">
 
-          <!-- ↓ Your custom cover ↓ -->
+          <!-- Custom Drive Image Cover -->
           <div class="placeholder-frame" id="placeholder">
-            <!-- direct‐link hosted on Google Drive -->
             <img
-              src="https://drive.google.com/uc?export=view&id=1B-YCg4U3rLy4rPCynrNbJqfGMCQAI0l6"
+              src="https://drive.google.com/uc?export=download&id=1B-YCg4U3rLy4rPCynrNbJqfGMCQAI0l6"
               alt="AI Made Simple course thumbnail"
             />
           </div>
